# bazel_test

./: .gitignore  WORKSPACE  package-lock.json  package.json
a/: BUILD.bazel  tsconfig.json
b/: BUILD.bazel  b.ts  package-lock.json  package.json
